--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -18,11 +18,14 @@
     "node-scss": "^7.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.0.0",
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
+    "simplebar-react": "^3.2.0",
+    "swiper": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
